# ChangeLog for dev-lang/gforth
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/gforth/ChangeLog,v 1.22 2007/03/19 11:44:52 kloeri Exp $

  19 Mar 2007; Bryan Østergaard <kloeri@gentoo.org> metadata.xml:
  Remove mkennedy from metadata.xml due to retirement.

  21 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  14 Dec 2006; Timothy Redaelli <drizzt@gentoo.org> gforth-0.6.2-r1.ebuild:
  Add ~x86-fbsd keyword

  12 May 2006; Matthew Kennedy <mkennedy@gentoo.org>
  +files/0.6.2-ppc-configure-gentoo.patch, gforth-0.6.2-r1.ebuild:
  Include a new USE flag "force-reg" and don't --enable-force-reg by default;
  Filter some CFLAGS known to cause build failures; Resolves Bug #120159;
  Include PPC specific build patch; Resolves Bug #131931.

  17 Feb 2006; Matthew Kennedy <mkennedy@gentoo.org>
  files/gforth.el-gentoo.patch:
  Fixed Emacs Lisp patch so that gforth is provided instead of forth-mode.

*gforth-0.6.2-r1 (15 Feb 2006)

  15 Feb 2006; Matthew Kennedy <mkennedy@gentoo.org>
  +files/0.6.2-c-to-forth-to-c.patch, +metadata.xml,
  +gforth-0.6.2-r1.ebuild:
  Added metadata.xml; Added self to it as new maintainer; Applied patch
  described in Bug #113296; Added dependency on dev-libs/ffcall which resolves
  Bug #113211.

  30 Oct 2005; Fabian Groffen <grobian@gentoo.org> gforth-0.6.2.ebuild:
  Marked ~ppc-macos (bug #110818)

  16 Sep 2005; Ciaran McCreesh <ciaranm@gentoo.org> ChangeLog:
  Converted to UTF-8, fixed encoding screwups

  01 May 2005; Michael Hanselmann <hansmi@gentoo.org> gforth-0.6.2.ebuild:
  Stable on ppc.

  22 Apr 2005; Simon Stelling <blubb@gentoo.org> gforth-0.6.2.ebuild:
  stable on amd64

  03 Sep 2004; David Holm <dholm@gentoo.org> gforth-0.6.2.ebuild:
  Added to ~ppc.

  06 Aug 2004; Malcolm Lashley <malc@gentoo.org> gforth-0.6.2.ebuild:
  Add ~amd64, closes bug #57634

*gforth-0.5.0-r1 (28 Jul 2004)
