@@ -4,6 +4,6 @@ AUX 50gforth-gentoo.el 200 RMD160 79bceb8512f929d2fc9916a9622ef9e466159acf SHA1 
 AUX gforth.el-gentoo.patch 390 RMD160 4957e9a817bb6bb9e58523285a00b2b3445f65ed SHA1 3782b75e0c8019c2988be9e4655c3a350b547ae2 SHA256 920d8b8e07ab8e81f0fe7883ec8ea34507a33a9db337d5e7725e96f804bbb5aa
 DIST 0.6.2-debug.diff 5127 RMD160 eade613904465b02ab8c480f136751fc334fd778 SHA1 188c19d8e7c046355b86da5dc37bcf5e896a341b SHA256 accb5c8b06fd11ff56febd32896678e670d2571a90ce7682dd87bd590e6159cb
 DIST gforth-0.6.2.tar.gz 1925536 RMD160 692aa412e59954f87a7b44027901248f8939e9ee SHA1 926faeac7ccc00e86a74954dc7c693b19f13e616 SHA256 28a201ae78b073ef350d7ac4a8283233029c6afe6072620ac6dd6db1d192d462
-EBUILD gforth-0.6.2-r1.ebuild 2266 RMD160 6f872b8b6b52861c0ef0cf431e2ad02992492f7a SHA1 f6bcc2763446edabdb8eff2fb26931f1d511e1cb SHA256 8306c21743ece082fcd9e354b6ee4c97d38932472b5a24d5006034b4a9428b1d
-MISC ChangeLog 3677 RMD160 37fbb8a205fea87fc7ecc4445ddf35060b27dd35 SHA1 125dfd77b6256559a05c58cbcb88241d7b837f9f SHA256 4ea57ff03784372d36a86cfd36d5528f4605333a55944e6dd71f227d3ab6ef90
+EBUILD gforth-0.6.2-r1.ebuild 2256 RMD160 f38eb3b24f07db475d8fb0bce5f91ed6afd5df9a SHA1 6f6d56c8a2fd4a605c7685b8937a4a60a8421b09 SHA256 9d38656ea6a77e2313cf4f401861722a56e82ac582bbcf982515c2a9fbeef241
+MISC ChangeLog 3824 RMD160 c0f38f4038c855f4537ce7663ca2b1394ecf50b7 SHA1 e22930187be34618475fb0e50067eb3747e04fbd SHA256 4a7bf0b6a84194044c4eb505b89f98ea3ace12b03c7ff7e10bfb0e085b1e30a1
 MISC metadata.xml 241 RMD160 dbd39e15096a9c09432225b4dee87bcadcb33907 SHA1 1beb1a93e4526085c26b282271027ad508b29059 SHA256 950a704ea9fcebef2e688e8bd6e0f0d292c967e246d58e4778b9955b1d615ab4
